[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cqi-backend"
version = "0.1.0"
description = "Code Quality Intelligence Backend API"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core web framework (minimal)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0", 
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    
    # Essential AI (lightweight only)
    "langchain-groq>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.1.0",
    
    # Environment 
    "python-dotenv>=1.0.0",
    
    # Git integration
    "GitPython>=3.1.0",
    "PyGithub>=1.59.0",
]

[project.optional-dependencies]
# Heavy ML dependencies - optional for local development only
ml = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

dev = [
    "pytest",
    "black", 
    "ruff",
]